--- a/renderer/index.html
+++ b/renderer/index.html
@@ -23,6 +23,7 @@
   <fieldset>
     <legend>登录</legend>
     <button>打开登录</button>
+    <button class="test-btn">点击测试</button>
   </fieldset>
   <div class="code"></div>
   <script src="./index.js"></script>
