--- a/renderer/index.html
+++ b/renderer/index.html
@@ -36,7 +36,10 @@
     <button class="connect-btn k-btn k-btn-primary" disabled>链接好友</button>
   </div>
 
-  <video class="hide video" autoplay></video>
+  <div class="hide video-wrap">
+    <video class="video" autoplay></video>
+    <div class="close-icon shadow hover:shadow-lg flex-center"><i class="iconfont iconclose"></i></div>
+  </div>
 
   <script src="./vendor/feedback.js"></script>
   <script src="./js/index.js" type="module"></script>
