--- a/renderer/index.html
+++ b/renderer/index.html
@@ -32,7 +32,7 @@
         <img src="assets/copy_icon.png" class="copy-icon" style="display: none;" />
       </span>
     </p>
-    <input class="friend-code k-input mb-md" type="text" placeholder="好友连接码">
+    <input class="friend-code k-input mb-md" type="text" placeholder="好友控制码">
     <button class="connect-btn k-btn k-btn-primary" disabled>链接好友</button>
   </div>
 
